// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`defaultProxyDebugSettings should return expected value 1`] = `
{
  "changeOrigin": true,
  "logLevel": "debug",
  "onProxyRes": [Function],
  "secure": true,
}
`;

exports[`defaultProxySettings should cache headers 1`] = `"max-age=2590000, public"`;

exports[`defaultProxySettings should return expected value 1`] = `
{
  "changeOrigin": true,
  "onProxyRes": [Function],
  "secure": true,
}
`;
